[Timeline] Adding basic support for printing home timeline as csv Adding api wrapper and processor to retrieve and print the current user's home timeline in csv format

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
 ######################################
+## Debug                           ##
+######################################
+
+tmp 
+
+######################################
+## Config                           ##
+######################################
+
+auth.json
+
+######################################
 ## Enviroment: Node.js              ##
 ######################################
 
