--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,6 @@
 {
+    
+    "extends": "eslint:recommended",
     "rules": {
         "comma-dangle": [
             2, 
@@ -38,13 +40,13 @@
             "never"
         ],
         "block-scoped-var": 2,
-        "camelcase": 1,
         "consistent-return": 2,
         "curly": 2,
         "default-case": 2,
         "eqeqeq": 2,
         "guard-for-in": 2,
         "no-alert": 2,
+        "no-console": 0,
         "no-else-return": 2,
         "no-empty-function": 2,
         "no-eval": 2,
@@ -64,12 +66,12 @@
         "no-self-compare": 2,
         "no-void": 2,
         "no-with": 2,
+        "camelcase": 1,
         "strict": 2,
         "vars-on-top": 2
     },
     "env": {
         "es6": true,
-        "browser": true
-    },
-    "extends": "eslint:recommended"
+        "node": true
+    }
 }
