--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alexander Bazo <alexanderbazo@googlemail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "optimist": "^0.6.1",
+    "promise": "^7.1.1",
+    "twitter": "^1.7.0"
+  }
 }
