--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alexander Bazo <alexanderbazo@googlemail.com>",
   "license": "MIT",
   "dependencies": {
+    "mkdirp": "^0.5.1",
     "optimist": "^0.6.1",
     "promise": "^7.1.1",
     "twitter": "^1.7.0"
