--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ######################################
 
 tmp 
+tweets.sqlite
 
 ######################################
 ## Config                           ##
