--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mkdirp": "^0.5.1",
     "optimist": "^0.6.1",
     "promise": "^7.1.1",
+    "sqlite3": "^3.1.8",
     "twitter": "^1.7.0"
   }
 }
