Preparing code base to add sentiment support

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ tweets.sqlite
 auth.json
 
 ######################################
+## Sentistrength                    ##
+######################################
+
+sentistrength
+
+######################################
 ## Enviroment: Node.js              ##
 ######################################
 
