--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 ######################################
+## Scripts                          ##
+######################################
+
+scripts
+
+######################################
 ## Debug                           ##
 ######################################
 
